<resources>
    <string name="app_name">LandTrip</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_trip_fragment">Add trip fragment</string>
    <string name="my_trips_fragment">My trips fragment</string>
    <string name="home_fragment">Home Fragment</string>
    <string name="loading">loading</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="retry">Retry</string>
    <string name="home_bottom_nav_view_title">Home</string>
    <string name="my_trips_bottom_nav_view_title">My trips</string>
    <string name="add_trip_bottom_nav_view_title">Add Trip</string>
    <string name="activity_name">Activity name</string>
    <string name="activity_rating">Activity rating</string>
    <string name="activity_price">Activity price</string>
    <string name="currency_code">CURRENCY CODE</string>
    <string name="rating">Rating:</string>
    <string name="price">Price:</string>
    <string name="point_of_interest_name">Point of interest name</string>
    <string name="rank">Rank:</string>
    <string name="rank_value">Rank Value</string>
    <string name="category">Category:</string>
    <string name="category_name">Category name</string>
    <string name="visited">Visited</string>
    <string name="trip_name">Trip name</string>
    <string name="add_trip_edit_text">Type in your trip name</string>
    <string name="activity_picture">Activity picture</string>
    <string name="there_are_no_added_trips">There are no added trips</string>
    <string name="add_trip">Add trip</string>
    <string name="search">Search</string>
</resources>