<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="@color/design_default_color_secondary_variant"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/pointOfInterestName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/card_title_text_size"
                android:textColor="@color/design_default_color_on_primary"
                android:text="@string/point_of_interest_name"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:gravity="center_horizontal" />
            <TextView
                android:id="@+id/rankLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/rank"
                android:textSize="@dimen/card_subtitle_text_size"
                android:textColor="@color/grey"
                android:layout_marginTop="5dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/rankValue"
                app:layout_constraintTop_toBottomOf="@id/pointOfInterestName"
                app:layout_constraintBottom_toTopOf="@id/categoryLabel"
                />
            <TextView
                android:id="@+id/rankValue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textSize="@dimen/card_subtitle_text_size"
                android:text="@string/rank_value"
                android:textColor="@color/grey"
                android:layout_marginStart="42dp"
                android:layout_marginLeft="42dp"
                app:layout_constraintStart_toEndOf="@id/rankLabel"
                app:layout_constraintTop_toBottomOf="@+id/pointOfInterestName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/categoryName" />

            <TextView
                android:id="@+id/categoryLabel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/category"
                android:textSize="@dimen/card_subtitle_text_size"
                android:textColor="@color/grey"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintTop_toBottomOf="@id/rankLabel"
                app:layout_constraintEnd_toStartOf="@id/categoryName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />
            <TextView
                android:id="@+id/categoryName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/card_subtitle_text_size"
                android:text="@string/category_name"
                android:textColor="@color/grey"
                android:layout_marginStart="60dp"
                android:layout_marginLeft="10dp"
                app:layout_constraintTop_toBottomOf="@id/rankValue"
                app:layout_constraintStart_toEndOf="@id/categoryLabel"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>